--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -2,40 +2,55 @@ h1{
     text-align: center;
 }
 body{
-    background-image: linear-gradient(to right, aqua , red);
+    background-color: #f8d7d7;
+    padding: 0;
+    margin: 0;
 }
 nav{
     border: solid;
-    background-color: gray;
-    border-color: gray;
-    margin: auto;
-    border-radius: 10px;
+    background-color: #aaa;
+    border-color: #aaa;
 }
 ul{
     text-align: right;
     list-style: none;
     padding: 0;
     margin: 0;
-    vertical-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
 }
-li{
-    display: inline-block;
-}
-a{
+li a{
     text-decoration: none;
-    color: #000000;
+    color: #ddd;
     width: 100px;
-    display: block;
-    padding: 10px 25px ;
+    padding: 10px 20px ;
     font-size: 15px;
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    display: flex;
+    flex-direction: row;
+}
+a:hover{
+    background-color: #888;
 }
 img{
-    width: 200px;
+    width: 100px;
     mix-blend-mode: multiply;
     text-align: left;
-    margin: 20px 10px 0 10px;
-    display: block;
+    margin: 10px 0px 10px 0px;
+    float: left;
+}
+
+footer{
+    background-color: #ddd;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .ul{
+        flex-direction: column; 
+    }
 }
